[package]
name = "kunjika"
version = "0.0.1"
authors = ["Shiv Shankar Dayal <shivshankar.dayal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://docs.rs/vergen/4.1.0/vergen/
[build-dependencies]
vergen = { version = "9.0.1" }

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
dev = []
prod = []

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = ["macros", "chrono", "uuid", "json", "time", "runtime-tokio", "bigdecimal"]
# git = "https://github.com/launchbadge/sqlx"
# path = "../sqlx"

[dependencies]
ntex = { version = "2.10.0", features = ["tokio", "cookie", "compress"] }
ntex-cors = { version = "2.0.0" }
clap = { version = "4.5.23", features = ["derive"] }
lettre = { version = "0.11.11", features = [
    "tokio1-native-tls",
    "hostname",
    "builder",
] }
nonblock-logger = { version = "0.2.2", default-features = false, features = [
    "color",
    "dbg",
] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
validator = { version = "0.19.0", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_qs = "0.13.0"
serde_json = "1.0.128"
json5 = "0.4.1"
rust-argon2 = "2.1.0"
ring = "0.17.8"
rand = "0.8.5"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
futures = "0.3.31"
thiserror = "2.0.6"
anyhow = "1.0.94"
url = "2.5.4"
itsdangerous = "0.4.1"
num_cpus = "1.16.0"
cargo-watch = "8.5.3"
cookie = "0.18.1"
rust-analyzer = "0.0.1"
async-trait = "0.1.83"
mobc = "0.8.4"
mobc-redis = "0.8.2"
base64 = "0.22.1"
md5 = "0.7.0"
ntex-multipart = "2.0.0"
ntex-files = "2.0.0"
nix = "0.29.0"
time = { version = "0.3.37", features = ["serde"] }
