[package]
name = "kunjika"
version = "0.0.1"
authors = ["Shiv Shankar Dayal <shivshankar.dayal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://docs.rs/vergen/4.1.0/vergen/
[build-dependencies]
vergen = { version = "9.0.1" }

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
dev = []
prod = []

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["macros", "chrono", "uuid", "json", "time", "runtime-tokio", "bigdecimal", "tls-native-tls"]
# git = "https://github.com/launchbadge/sqlx"
# path = "../sqlx"

[dependencies]
ntex = { version = "2.15.1", features = ["tokio", "cookie", "compress"] }
ntex-cors = { version = "2.1.0" }
clap = { version = "4.5.45", features = ["derive"] }
lettre = { version = "0.11.18", features = [
    "tokio1-native-tls",
    "hostname",
    "builder",
] }
nonblock-logger = { version = "0.2.2", default-features = false, features = [
    "color",
    "dbg",
] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = { version = "1.37.2", features = ["serde-float"] }
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_qs = "0.15.0"
serde_json = "1.0.142"
json5 = "0.4.1"
rust-argon2 = "3.0.0"
ring = "0.17.14"
rand = { version = "0.9.2", features=["thread_rng"]}
hex = "0.4.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
futures = "0.3.31"
thiserror = "2.0.15"
anyhow = "1.0.99"
url = "2.5.4"
itsdangerous = "0.4.1"
num_cpus = "1.17.0"
cargo-watch = "8.5.3"
cookie = "0.18.1"
rust-analyzer = "0.0.1"
async-trait = "0.1.89"
mobc = "0.9.0"
mobc-redis = "0.9.0"
base64 = "0.22.1"
md5 = "0.8.0"
ntex-multipart = "2.0.0"
ntex-files = "2.1.0"
nix = { version="0.30.1", features=["user"] }
time = { version = "0.3.41", features = ["serde"] }
