[package]
name = "kunjika"
version = "0.0.1"
authors = ["Shiv Shankar Dayal <shivshankar.dayal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://docs.rs/vergen/4.1.0/vergen/
[build-dependencies]
vergen = { version = "9.0.1" }

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
dev = []
prod = []

[dependencies.sqlx]
version = "0.9.0"
default-features = false
features = ["macros", "time", "uuid", "json", "runtime-tokio", "bigdecimal", "tls-native-tls", "postgres"]

[dependencies]
ntex = { version = "3.9.6", features = ["tokio", "cookie", "compress"] }
ntex-cors = { version = "3.2.1" }
clap = { version = "4.6.1", features = ["derive"] }
lettre = { version = "0.11.22", features = [
    "tokio1-native-tls",
    "hostname",
    "builder",
] }
nonblock-logger = { version = "0.2.2", default-features = false, features = [
    "color",
    "dbg",
] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
rust_decimal = { version = "1.42.0", features = ["serde-float"] }
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_qs = "1.1.2"
serde_json = "1.0.150"
json5 = "1.3.1"
ring = "0.17.14"
rand = { version = "0.10.1", features=["thread_rng"]}
hex = "0.4.3"
jsonwebtoken = { version = "10.4.0", features=["rust_crypto"]}
lazy_static = "1.5.0"
futures = "0.3.32"
thiserror = "2.0.18"
anyhow = "1.0.102"
url = "2.5.8"
itsdangerous = "0.4.1"
num_cpus = "1.17.0"
cargo-watch = "8.5.3"
cookie = "0.18.1"   
async-trait = "0.1.89"
mobc = "0.9.0"  
mobc-redis = "0.9.0"
base64 = "0.22.1"
md5 = "0.8.0"
ntex-multipart = "3.2.0"
ntex-files = "3.2.0"
nix = { version="0.31.3", features=["user"] }
time = { version = "0.3.47", features = ["serde"] }
tokio = "1.52.3"
